deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: checklist-editor
  name: checklist-editor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checklist-editor
  template:
    metadata:
      labels:
        app: checklist-editor
    spec:
      imagePullSecrets:
        - name: $DOCKER_PULL_SECRET
      containers:
        - name: checklist-editor
          image: $DOCKER_IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: checklist-editor-service
spec:
  type: NodePort
  selector:
    app: checklist-editor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
